# openai-billing-playwright

./: .gitignore  README.md  openai-billing.py  package.json  pyproject.toml  pyrightconfig.json
.github/workflows/: gh-release.yml  routine-tests.yml
.husky/: pre-commit
openai_billing/: __init__.py  __main__.py  get_browser.py  openai_billing.py
tests/: email-pw-pairs-sample.txt  test_openai_billing.py
