[tool.poetry]
name = "openai-billing"
version = "0.1.0a1"
description = "Fetch openai billing info from command line"
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/openai-billing-playwright"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.7.0"
# set-loglevel = "^0.1.2"  # instead use loguru.logger.remove();loguru.logger.add(sys.stderr, level="DEBUG|INFO etc"
typer = "^0.9.0"
playwright = "^1.37.0"
rich = "^13.5.2"
charset-normalizer = "^3.2.0"
pyperclip = "^1.8.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.278"
pytest = "^7.1"
flake8 = "^3.9.2"
isort = "^5.10.1"
black = "^22.3.0"
pylint = "^2.14.2"
pyright = "^1.1.254"
pydocstyle = "^6.1.1"
poethepoet = "^0.10.0"

[tool.poe.executor]
type = "poetry"

[tool.poe.tasks]
memo = "echo poe test or poetry run poe test"
test = "pytest tests"
ruff = "ruff ."
ruff-fix = "ruff . --fix"
pyright = "pyright openai_billing"
flake8 = "flake8 openai_billing --ignore F401,E501,F841"
check = ["pyright", "flake8"]
export = "poetry export --without-hashes -f requirements.txt -o requirements.txt"
build = "poetry build"
publish = "poetry publish"
release = ["test", "build", "publish"]
lint = { cmd = "pylint openai_billing" }
isort = "isort tests openai_billing"
black = "black tests openai_billing"
format = ["isort", "black"]
docstyle = "pydocstyle --convention=google tests openai_billing"
prerelease = {cmd = "poetry version prerelease && sync-version"}
tunnel = {cmd = "ssh -CN ip_or_hostname_defined_in_hosts -L 9091:127.0.0.1:9091"}

[tool.poetry.scripts]
"openai-billing" = "openai_billing.__main__:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules"
log_cli = true
testpaths = [
    "tests",
    # "integration",
]

[tool.black]
skip-string-normalization = 0

[tool.isort]
profile = "black"
multi_line_output = 3
